--- a/index.html
+++ b/index.html
@@ -29,306 +29,11 @@ THE SOFTWARE.
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <scipt src="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"></scipt>
-<style type="text/css"> 
-<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-
-p, h1, h2, h3, h4, h5{
-  font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
-  color: #092930;
-}
-
-h1{
-  font-weight: 600;
-  font-size: 50px;
-}
-
-.navbar-default {
-    background-color: #5BBCC9;
-    border-color: #5BBCC9;
-    padding-bottom: 50px;
-    padding-top: 15px;
-}
-.navbar-default .navbar-nav>li>a {
-  color: white;
-  font-size: 125%;
-}
-.navbar-default .navbar-brand {
-    color: white;
-    font-size: 125%;
-}
-
-.main{
-  background-color: #5BBCC9;
-  padding-top: 0;
-  padding-bottom: 100px;
-  height: 100%
-}
-  body {
-  backgrond-color: #2C3E50;
-  font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
-}
-body p{
-  font-weight: 200;
-}
-.highlights{
-  margin: auto;
-  width: 70%;
-}
-
-#highlights{
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-}
-#sub_heading{
-  color: #6C7A89;
-  padding-bottom: 50px;
-}
-.highlights img{
-  padding-right: 35px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-}
-
-.highlights p{
-  font-size: 19px;
-}
-
-.highlights h3{
- color: #2C3E50;
-}
-
-.highlights h4{
-  color: #5BBCC9;
-}
-
-.panel2{
-  background-color: white;
-}
-
-.media-body{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.terminal-window {
-  text-align: left;
-  width: 650px;
-  height: 400px;
-  border-radius: 10px;
-  margin: auto;
-  position: relative;
-}
-
-.terminal-window header {
-  background: #E0E8F0;
-  height: 30px;
-  border-radius: 8px 8px 0 0;
-  padding-left: 10px;
-}
-
-.terminal-window header .button {
-  width: 12px;
-  height: 12px;
-  margin: 10px 4px 0 0;
-  display: inline-block;
-  border-radius: 8px;
-}
-
-.terminal-window header .button.green {
-  background: #3BB662;
-}
-
-.terminal-window header .button.yellow {
-  background: #E5C30F;
-}
-
-.terminal-window header .button.red {
-  background: #E75448;
-}
-
-.terminal-window section.terminal {
-  color: white;
-  font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
-  font-size: 11pt;
-  background: #30353A;
-  padding: 10px;
-  box-sizing: border-box;
-  position: absolute;
-  width: 100%;
-  top: 30px;
-  bottom: 0;
-  overflow: auto;
-}
-
-.terminal-data { display: none; }
-.terminal-window .gray { color: gray; }
-.terminal-window .green { color: green;}
-  #console {
-    color: #fff;
-    width:850px;
-    /*margin-left:auto;
-    margin-right:auto;
-    margin-top:100px;*/
-  }
-  a {
-    color: #0bc;
-    text-decoration: none;
-  }
-  #a {
-    color: #E9D460;
-  }
-  #c {
-    color: #0bc;
-  }
-  #b {
-    color: #ff0096;
-  }
-
-  footer {
-    height: 175px;
-    background-color: #2C3E50;
-    color: #E9D460;
-    text-align: center;
-  }
-  #thank_you{
-    padding-top: 50px;
-  }
-  .icons{
-    margin:  0 auto;
-    padding-top: 30px;
-  }
-  .icons img{
-    padding-right:15px;
-    padding-left: 15px;
-  }
-
-</style> 
-
+<link rel="stylesheet" href="css/style.css">
+<script src="js/terminal.js"></script>
 </head> 
 <body> 
-<script type="text/javascript"> 
-
-  var Typer={
-  text: null,
-  accessCountimer:null,
-  index:0, // current cursor position
-  speed:2, // speed of the Typer
-  file:"", //file, must be setted
-  accessCount:0, //times alt is pressed for Access Granted
-  deniedCount:0, //times caps is pressed for Access Denied
-  init: function(){// inizialize Hacker Typer
-    accessCountimer=setInterval(function(){Typer.updLstChr();},500); // inizialize timer for blinking cursor
-    $.get(Typer.file,function(data){// get the text file
-      Typer.text=data;// save the textfile in Typer.text
-      Typer.text = Typer.text.slice(0, Typer.text.length-1);
-    });
-  },
  
-  content:function(){
-    return $("#console").html();// get console content
-  },
- 
-  write:function(str){// append to console content
-    $("#console").append(str);
-    return false;
-  },
- 
-  makeAccess:function(){//create Access Granted popUp      FIXME: popup is on top of the page and doesn't show is the page is scrolled
-    Typer.hidepop(); // hide all popups
-    Typer.accessCount=0; //reset count
-    var ddiv=$("<div id='gran'>").html(""); // create new blank div and id "gran"
-    ddiv.addClass("accessGranted"); // add class to the div
-    ddiv.html("<h1>ACCESS GRANTED</h1>"); // set content of div
-    $(document.body).prepend(ddiv); // prepend div to body
-    return false;
-  },
-  makeDenied:function(){//create Access Denied popUp      FIXME: popup is on top of the page and doesn't show is the page is scrolled
-    Typer.hidepop(); // hide all popups
-    Typer.deniedCount=0; //reset count
-    var ddiv=$("<div id='deni'>").html(""); // create new blank div and id "deni"
-    ddiv.addClass("accessDenied");// add class to the div
-    ddiv.html("<h1>ACCESS DENIED</h1>");// set content of div
-    $(document.body).prepend(ddiv);// prepend div to body
-    return false;
-  },
- 
-  hidepop:function(){// remove all existing popups
-    $("#deni").remove();
-    $("#gran").remove();
-  },
- 
-  addText:function(key){//Main function to add the code
-    if(key.keyCode==18){// key 18 = alt key
-      Typer.accessCount++; //increase counter 
-      if(Typer.accessCount>=3){// if it's presed 3 times
-        Typer.makeAccess(); // make access popup
-      }
-    }else if(key.keyCode==20){// key 20 = caps lock
-      Typer.deniedCount++; // increase counter
-      if(Typer.deniedCount>=3){ // if it's pressed 3 times
-        Typer.makeDenied(); // make denied popup
-      }
-    }else if(key.keyCode==27){ // key 27 = esc key
-      Typer.hidepop(); // hide all popups
-    }else if(Typer.text){ // otherway if text is loaded
-      var cont=Typer.content(); // get the console content
-      if(cont.substring(cont.length-1,cont.length)=="|") // if the last char is the blinking cursor
-        $("#console").html($("#console").html().substring(0,cont.length-1)); // remove it before adding the text
-      if(key.keyCode!=8){ // if key is not backspace
-        Typer.index+=Typer.speed; // add to the index the speed
-      }else{
-        if(Typer.index>0) // else if index is not less than 0 
-          Typer.index-=Typer.speed;// remove speed for deleting text
-      }
-      var text=Typer.text.substring(0,Typer.index)// parse the text for stripping html enities
-      var rtn= new RegExp("\n", "g"); // newline regex
-  
-      $("#console").html(text.replace(rtn,"<br/>"));// replace newline chars with br, tabs with 4 space and blanks with an html blank
-      //window.scrollBy(0,50); // scroll to make sure bottom is always visible
-    }
-    if ( key.preventDefault && key.keyCode != 122 ) { // prevent F11(fullscreen) from being blocked
-      key.preventDefault()
-    };  
-    if(key.keyCode != 122){ // otherway prevent keys default behavior
-      key.returnValue = false;
-    }
-  },
- 
-  updLstChr:function(){ // blinking cursor
-    var cont=this.content(); // get console 
-    if(cont.substring(cont.length-1,cont.length)=="|") // if last char is the cursor
-      $("#console").html($("#console").html().substring(0,cont.length-1)); // remove it
-    else
-      this.write("|"); // else write it
-  }
-}
- 
-function replaceUrls(text) {
-  var http = text.indexOf("http://");
-  var space = text.indexOf(".me ", http);
-  if (space != -1) { 
-    var url = text.slice(http, space-1);
-    return text.replace(url, "<a href=\""  + url + "\">" + url + "</a>");
-  } else {
-  return text
-}
-}
-Typer.speed=3;
-Typer.file="jeffweisbein.txt";
-Typer.init();
- 
-var timer = setInterval("t();", 30);
-function t() {
-  Typer.addText({"keyCode": 123748});
-  if (Typer.index > Typer.text.length) {
-    clearInterval(timer);
-  }
-}
- 
-</script> 
-
 <div class="main">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
