--- a/skip.html
+++ b/skip.html
@@ -8,7 +8,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <scipt src="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"></scipt>
 <link rel="stylesheet" href="css/style.css">
-<script src="js/terminal.js"></script>
 </head> 
 <body> 
  
@@ -44,27 +43,25 @@
   </header>
   <section class="terminal">
     <div id="console"></div> 
+    <p><span id='a'>ruth@johnson</span>:<span id='b'>~</span><span id='c'>$</span> cat About_Ruthie.txt</p>
+    <br/>
+    <p>Hi, my name is Ruth Dolly Johnson!</p>
+    <p>I'm a senior at UCLA studying math/computer science and minoring in
+bioinformatics. I'm working at Sandia National Laboratories as a
+R&D Engineering Intern.</p>
+    <br/>
+    <p>Here's a bit of the <a href="work.html">Work</a> I have done. I also like to do some <br/><a href="code.html">Code</a> on the side, and share my <a href="https://medium.com/@ruthiejohnson">Thoughts.</a></p>
+
+    <p>Feel free to connect or just say hi through <a href="mailto:ruthjohnson@ucla.edu">email</a>,  <a href="https://github.com/ruthjohnson95">Github</a>, or  <a href="https://www.linkedin.com/in/ruthjohnson13">LinkedIn</a>.</p>
+
+    <p>Fun Fact of the Day: I used to do competitive gymnastics. And yes, I can 
+      still do a flip. You can see some more cool flips <a href="https://www.youtube.com/watch?v=Jh0s3gE7KMw">here.</a>.</p>
+    <br/>
+
+    <p>...continue to <a href="work.html">WORK</a> ></p>
   </section>
 </div>
-<div class="terminal-window">
-    <a href="skip.html" style="color:#2d5e64;">(Skip...ouch, this gives me a headache.)</a>
-  </div>
 </div>
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-610661-7']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
 </nav>
 </body> 
 </html> 
