--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        
       </button>
-      <a class="navbar-brand" href="#">Ruth Dolly</a>
+      <a class="navbar-brand">Ruth Dolly</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,12 +42,12 @@
   <section class="terminal">
     <div id="console"></div> 
   </section>
-</div>
-<div class="terminal-window">
-    <a href="skip.html" style="color:#2d5e64;">(Skip...ouch, this gives me a headache.)</a>
   </div>
+  <div class="skip">
+<a href="skip.html" style="color:#2d5e64;">
+(Skip...ouch, this gives me a headache.)</a>
 </div>
-
+</div>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
