--- a/work.html
+++ b/work.html
@@ -126,7 +126,7 @@
 			<div class="cd-timeline-content">
 				
         	<h2>Resume</h2>
-        	<h4 id="position">click <a href="resume.pdf" style="color:#30353A;" target="_blank">here</a> to download</h4>
+        	<a href="resume.pdf" style="color:#30353A;" target="_blank"><h4 id="position">click here to download</h4></a>
 				<span class="cd-date">updated July 2016</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
