--- a/code.html
+++ b/code.html
@@ -87,9 +87,9 @@
 
     <div class=" card [ is-collapsed ] ">
       <div class="card__inner [ js-expander ]">
-        <span>MyoMessenger</span>
+        <span>Happy Hour</span>
         <h4>Inspriring a safer driving experience</h4>
-        <span class="glyphicon glyphicon-comment"></span>
+        <span id="star" class="glyphicon glyphicon-comment"></span>
       </div>
       <div class="card__expander">
         <i class="fa fa-close [ js-collapser ]"></i>
