fixed star, again

--- a/code.html
+++ b/code.html
@@ -87,9 +87,9 @@
 
     <div class=" card [ is-collapsed ] ">
       <div class="card__inner [ js-expander ]">
-        <span>Happy Hour</span>
+        <span>MyoMessenger</span>
         <h4>Inspriring a safer driving experience</h4>
-        <span id="star" class="glyphicon glyphicon-comment"></span>
+        <span class="glyphicon glyphicon-comment"></span>
       </div>
       <div class="card__expander">
         <i class="fa fa-close [ js-collapser ]"></i>
@@ -116,8 +116,8 @@
       <div class="card__expander">
         <i class="fa fa-close [ js-collapser ]"></i>
         <div class="col-sm-4">
-        <h3>MyoMessenger</h3> 
-          <h4><span class="glyphicon glyphicon-star"></span> Top 4 Finalists</h4>
+        <h3>Happy Hour</h3> 
+          <h4><span id="star" class="glyphicon glyphicon-star"></span> Best Uber Hack</h4>
         <h4>Cal Hacks 2.0</h4>
           <a href="http://devpost.com/software/happyhour"><span class="glyphicon glyphicon-link"></span></a>
           <a href="https://github.com/ruthjohnson95/HappyHour"><span class="glyphicon glyphicon-folder-open"></span></a>
