--- a/work.html
+++ b/work.html
@@ -112,7 +112,7 @@
         <h4 id="position">Web Developer</h4>
 				<p>Updated Daily Bruin site on daily basis including publishing breaking news and maintaining main site. Created flatpages for quarterly events and projects. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date">October 2015 - Juen 2016</span>
+				<span class="cd-date">October 2015 - June 2016</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 			
