--- a/work.html
+++ b/work.html
@@ -32,8 +32,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   
       <ul class="nav navbar-nav navbar-right">
+      <li><a href="index.html">Home</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="code.html">Code</a></li>
+        <li><a href="resume.pdf">Resume</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -118,20 +120,20 @@
 			
 		</div> <!-- cd-timeline-block -->
 
-	<div class="cd-timeline-block">
+	<!--<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
 				<img src="img/resume-24.png">
-			</div> <!-- cd-timeline-img -->
+			</div> 
 
 			<div class="cd-timeline-content">
 				
         	<h2>Resume</h2>
         	<a href="resume.pdf" style="color:#30353A;" target="_blank"><h4 id="position">click here to download</h4></a>
 				<span class="cd-date">updated July 2016</span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
+			</div> 
+		</div>
 			
-		</div> <!-- cd-timeline-block -->	
+		</div> --> <!-- cd-timeline-block -->	
 	</section> <!-- cd-timeline -->
   
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
