--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.html">Home</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="code.html">Code</a></li>
+        <li><a href="resume.pdf">Resume</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
